# sistema-inventario

./: .gitignore  COMO_DISTRIBUIR.md  INSTRUCCIONES_INSTALACION.md  LICENSE  MANIFEST.in  README.md  VENV_README.md  activate_venv.bat  activate_venv.sh  build_exe.py  instalar.bat  instalar_sistema_inventario.bat  install.bat  install.sh  install_from_github.sh  install_tkcalendar.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_github.py  uninstall.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crud/: materials_crud.py  orders_crud.py  products_crud.py  recipes_crud.py
database/: connection.py  database.py
docs/: CALENDARIOS_PEDIDOS.md
installers/linux-macos/: install_from_github.sh
installers/windows/: instalar.bat  instalar_sistema_inventario.bat  install_from_github.bat  uninstall.bat
interfaces/: colors.py  dashboard.py  graphics.py  gui.py  view_materials.py  view_orders.py  view_products.py  view_recipes.py
models/: materials.py  products.py  recipes.py
services/: inventory_service.py  recipe_service.py
utils/: helpers.py
